Changed index.html main.css responsive.css Renaming #hero-area to #welcome Fix some code readability

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -103,17 +103,17 @@ a:hover {
   background: rgba(230, 230, 230, 0.9);
   border-bottom: solid 1px gray;
 }
-#hero-area {
+#welcome {
   background: #005994;
   color: #fff;
 }
-#hero-area .btn {
+#welcome .btn {
   margin-right: 20px;
 }
-#hero-area img {
+#welcome img {
   max-width: 100%;
 }
-#hero-area p {
+#welcome p {
   padding: 50px 0;
 }
 #services h3 {
